--- a/calendario-talleres-microservices.html
+++ b/calendario-talleres-microservices.html
@@ -1,126 +1,44 @@
 ---
 layout: page
 title: Calendario de los Talleres Microservices MX
-calendar: true
+permalink: /calendar/
 ---
+{% comment %}
+    Based in great example from https://www.raymondcamden.com/2017/02/24/an-example-of-a-static-site-with-a-dynamic-calendar
+    And solution for jQuery conficts with: https://stackoverflow.com/a/43026994
+{% endcomment %}
 
-
-<div class="container">
-
-    <div id='calendar'></div>
-
-</div>
-
-
-<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/jquery-3.1.1.min.js"></script>
+<script>
+   jq311 = jQuery.noConflict(false);
+</script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/locale/es.js'></script>
+
+<link href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css' rel='stylesheet' />
+<link  media="print" href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css' rel='stylesheet' />
+
 <script>
+jq311(document).ready(function() {
 
-	   	/* CALENDAR */
-
-$(document).ready(function() {
-    init_calendar();
+	jq311('#calendar').fullCalendar({
+		events:'{{ site.baseurl }}/calendar-data',
+        hiddenDays: [ 0 ],
+        minTime: '08:00',
+        maxTime: '21:00',
+        defaultView: 'listWeek',
+        defaultDate: '2018-12-05',
+        themeSystem: 'bootstrap4',
+        header: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'month,agendaWeek,agendaDay,listMonth'
+        },
+        weekNumbers: true
 	});
-		    function  init_calendar() {
 
-				if( typeof ($.fn.fullCalendar) === 'undefined'){ return; }
-				console.log('init_calendar');
-
-				var date = new Date(),
-					d = date.getDate(),
-					m = date.getMonth(),
-					y = date.getFullYear(),
-					started,
-					categoryClass;
-
-				var calendar = $('#calendar').fullCalendar({
-				  header: {
-					left: 'prev,next today',
-					center: 'title',
-					right: 'month,agendaWeek,agendaDay,listMonth'
-				  },
-				  selectable: true,
-				  selectHelper: true,
-				  select: function(start, end, allDay) {
-					$('#fc_create').click();
-
-					started = start;
-					ended = end;
-
-					$(".antosubmit").on("click", function() {
-					  var title = $("#title").val();
-					  if (end) {
-						ended = end;
-					  }
-
-					  categoryClass = $("#event_type").val();
-
-					  if (title) {
-						calendar.fullCalendar('renderEvent', {
-							title: title,
-							start: started,
-							end: end,
-							allDay: allDay
-						  },
-						  true // make the event "stick"
-						);
-					  }
-
-					  $('#title').val('');
-
-					  calendar.fullCalendar('unselect');
-
-					  $('.antoclose').click();
-
-					  return false;
-					});
-				  },
-				  eventClick: function(calEvent, jsEvent, view) {
-					$('#fc_edit').click();
-					$('#title2').val(calEvent.title);
-
-					categoryClass = $("#event_type").val();
-
-					$(".antosubmit2").on("click", function() {
-					  calEvent.title = $("#title2").val();
-
-					  calendar.fullCalendar('updateEvent', calEvent);
-					  $('.antoclose2').click();
-					});
-
-					calendar.fullCalendar('unselect');
-				  },
-				  editable: true,
-				  events: [{
-					title: 'All Day Event',
-					start: new Date(y, m, 1)
-				  }, {
-					title: 'Long Event',
-					start: new Date(y, m, d - 5),
-					end: new Date(y, m, d - 2)
-				  }, {
-					title: 'Meeting',
-					start: new Date(y, m, d, 10, 30),
-					allDay: false
-				  }, {
-					title: 'Lunch',
-					start: new Date(y, m, d + 14, 12, 0),
-					end: new Date(y, m, d, 14, 0),
-					allDay: false
-				  }, {
-					title: 'Birthday Party',
-					start: new Date(y, m, d + 1, 19, 0),
-					end: new Date(y, m, d + 1, 22, 30),
-					allDay: false
-				  }, {
-					title: 'Click for Google',
-					start: new Date(y, m, 28),
-					end: new Date(y, m, 29),
-					url: 'http://google.com/'
-				  }]
-				});
-
-			};
-
+});
 </script>
+
+<div id="calendar"></div>
